# Julian

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run.sh
.github/workflows/: ci.yml
api_backend/: main.py
dashboard/: streamlit_app.py
docs/: README.md
notebooks/: README.md
tests/: test_smoke.py
web-frontend/: package-lock.json  package.json
web-frontend/pages/: _app.tsx  analytics.tsx  backtesting.tsx  data.tsx  health.tsx  index.tsx  models.tsx  portfolio.tsx  profile.tsx  research.tsx  settings.tsx  strategies.tsx  trades.tsx
web-frontend/pages/strategies/: [id].tsx
web-frontend/src/components/: SidebarLayout.tsx
