[tool.poetry]
name = "quant-platform"
version = "0.1.0"
description = "Production-ready quant research platform"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
backtrader = "^1.9"
yfinance = "^0.2"
duckdb = "^0.10"
prefect = "^2.16"
pyportfolioopt = "^1.5"
empyrical = "^0.5"
streamlit = "^1.35"
stable-baselines3 = {extras = ["extra"], version = "^2.3"}
shap = "^0.45"
xgboost = "^2.0"
scikit-learn = "^1.5"
matplotlib = "^3.9"
torch = "2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 